--- a/TestingSystem.XamarinForms/TestingSystem.XamarinForms/Views/LoginPage.xaml
+++ b/TestingSystem.XamarinForms/TestingSystem.XamarinForms/Views/LoginPage.xaml
@@ -7,18 +7,21 @@
              NavigationPage.HasNavigationBar="False"
              x:Class="TestingSystem.XamarinForms.Views.LoginPage">
     <ContentPage.Content>
-        <StackLayout>
+        <StackLayout VerticalOptions="Center">
             <Entry Placeholder="Email"
                    WidthRequest="250"
-                   x:Name="entryLogin"
-                   VerticalOptions="CenterAndExpand" 
+                   x:Name="entryEmail"
                    HorizontalOptions="CenterAndExpand" />
-            <ActivityIndicator x:Name="indicator" IsRunning="False" VerticalOptions="Center" HorizontalOptions="Center" Color="Gray"/>
+            <Entry Placeholder="Password"
+                   IsPassword="True"
+                   WidthRequest="250"
+                   x:Name="entryPassword"
+                   HorizontalOptions="CenterAndExpand" />
+            <ActivityIndicator x:Name="indicator" IsRunning="False"  HorizontalOptions="Center" Color="Gray" Margin="0,50,0,50"/>
             <Button Text="Login"
                     x:Name="btnLogin"
                     WidthRequest="150"
-                    VerticalOptions="CenterAndExpand" 
-                 HorizontalOptions="CenterAndExpand" />
+                    HorizontalOptions="CenterAndExpand" />
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
