--- a/TestingSystem.XamarinForms/TestingSystem.XamarinForms/Views/TestPage.xaml
+++ b/TestingSystem.XamarinForms/TestingSystem.XamarinForms/Views/TestPage.xaml
@@ -4,13 +4,33 @@
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
+             xmlns:b="clr-namespace:TestingSystem.XamarinForms.Behaviors"
              Title="Tests"
              x:Class="TestingSystem.XamarinForms.Views.TestPage">
     <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Tests"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
-        </StackLayout>
+        <ListView SelectedItem="{Binding SelectedItem}"  ItemsSource="{Binding Tests}" SelectionMode="Single">
+            <ListView.Behaviors>
+                <b:EventToCommandBehavior EventName="ItemTapped" Command="{Binding ItemTappedCommand}"/>
+            </ListView.Behaviors>
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <ViewCell>
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
+                            <Grid.RowDefinitions>
+                                <RowDefinition/>
+                                <RowDefinition/>
+                            </Grid.RowDefinitions>
+                            <Label Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Text="{Binding TestName}" HorizontalOptions="Center" VerticalOptions="Center"/>
+                            <Label Grid.Row="1" Grid.Column="0" Text="{Binding StartTime}" HorizontalOptions="Center"/>
+                            <Label Grid.Row="1" Grid.Column="1" Text="{Binding Path=Length, StringFormat='Length: {0}'}" HorizontalOptions="Center"/>
+                        </Grid>
+                    </ViewCell>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
     </ContentPage.Content>
 </ContentPage>
