--- a/TestingSystem.XamarinForms/TestingSystem.XamarinForms/Controls/ManyAnswersManyCorrectViewCell.xaml
+++ b/TestingSystem.XamarinForms/TestingSystem.XamarinForms/Controls/ManyAnswersManyCorrectViewCell.xaml
@@ -6,34 +6,20 @@
              xmlns:cnvrt="clr-namespace:TestingSystem.XamarinForms.Infrastructure"
              mc:Ignorable="d"
              x:Class="TestingSystem.XamarinForms.Controls.ManyAnswersManyCorrectViewCell">
-    <!--<Grid>
-        <Grid.Resources>
-            <cnvrt:ImagePathValueConverter x:Key="pathConverter"/>
-            <cnvrt:ImageSizeValueConverter x:Key="sizeConverter"/>
-        </Grid.Resources>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-        </Grid.RowDefinitions>
-        <Image Grid.Row="0" HeightRequest="{Binding Question.ImagePath, Converter={StaticResource sizeConverter}}" WidthRequest="{Binding Question.ImagePath, Converter={StaticResource sizeConverter}}" Aspect="AspectFit" HorizontalOptions="Center" Source="{Binding Question.ImagePath, Converter={StaticResource pathConverter}}"/>
-        <Label Grid.Row="1" Text="{Binding Question.QuestionString, StringFormat='many many {0}'}" HorizontalOptions="Center"/>
-        <ListView Grid.Row="2" ItemsSource="{Binding Answers}" HasUnevenRows="True">
-            <ListView.ItemTemplate>
-                <DataTemplate>
-                    <TextCell Text="{Binding AnswerString}"/>
-                </DataTemplate>
-            </ListView.ItemTemplate>
-        </ListView>
-    </Grid>-->
     <StackLayout>
         <StackLayout.Resources>
             <cnvrt:ImagePathValueConverter x:Key="pathConverter"/>
             <cnvrt:ImageSizeValueConverter x:Key="sizeConverter"/>
         </StackLayout.Resources>
-        <Image HeightRequest="{Binding Question.ImagePath, Converter={StaticResource sizeConverter}}" WidthRequest="{Binding Question.ImagePath, Converter={StaticResource sizeConverter}}" Aspect="AspectFit" HorizontalOptions="Center" Source="{Binding Question.ImagePath, Converter={StaticResource pathConverter}}"/>
+        <Image 
+            HeightRequest="{Binding Question.ImagePath, Converter={StaticResource sizeConverter}}" 
+            WidthRequest="{Binding Question.ImagePath, Converter={StaticResource sizeConverter}}" 
+            Source="{Binding Question.ImagePath, Converter={StaticResource pathConverter}}"
+            HorizontalOptions="Center" 
+            x:Name="img"
+            Aspect="AspectFit" />
         <Label Text="{Binding Question.QuestionString}" HorizontalOptions="Center"/>
-        <ListView ItemsSource="{Binding Answers}" SelectionMode="None">
+        <ListView ItemsSource="{Binding Answers}" SelectionMode="None" HasUnevenRows="True">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <ViewCell>
@@ -42,8 +28,8 @@
                                 <ColumnDefinition Width="*"/>
                                 <ColumnDefinition Width="Auto"/>
                             </Grid.ColumnDefinitions>
-                            <Label Grid.Column="0" Text="{Binding AnswerString}"/>
-                            <Switch Grid.Column="1" Margin="10" IsToggled="{Binding IsPicked}"  /> 
+                            <Label Grid.Column="0" Text="{Binding AnswerString}" VerticalOptions="Center" Margin="10,0,0,0"/>
+                            <Switch Grid.Column="1" Margin="10" IsToggled="{Binding IsPicked}"/> 
                         </Grid>
                     </ViewCell>
                 </DataTemplate>
