--- a/TestingSystem.XamarinForms/TestingSystem.XamarinForms/Controls/ManyAnswersOneCorrectViewCell.xaml
+++ b/TestingSystem.XamarinForms/TestingSystem.XamarinForms/Controls/ManyAnswersOneCorrectViewCell.xaml
@@ -7,37 +7,22 @@
              xmlns:cnvrt="clr-namespace:TestingSystem.XamarinForms.Infrastructure"
              mc:Ignorable="d"
              x:Class="TestingSystem.XamarinForms.Controls.ManyAnswersOneCorrectViewCell">
-    <!--<Grid>
-        <Grid.Resources>
-            <cnvrt:ImagePathValueConverter x:Key="pathConverter"/>
-            <cnvrt:ImageSizeValueConverter x:Key="sizeConverter"/>
-        </Grid.Resources>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-        </Grid.RowDefinitions>
-        <Image Grid.Row="0" HeightRequest="{Binding Question.ImagePath, Converter={StaticResource sizeConverter}}" WidthRequest="{Binding Question.ImagePath, Converter={StaticResource sizeConverter}}" Aspect="AspectFit" HorizontalOptions="Center" Source="{Binding Question.ImagePath, Converter={StaticResource pathConverter}}"/>
-        <Label Grid.Row="1" Text="{Binding Question.QuestionString, StringFormat='many one {0}'}" HorizontalOptions="Center"/>
-        <ListView Grid.Row="2" ItemsSource="{Binding Answers}" HasUnevenRows="True">
-            <ListView.ItemTemplate>
-                <DataTemplate>
-                    <TextCell Text="{Binding AnswerString}"/>
-                </DataTemplate>
-            </ListView.ItemTemplate>
-        </ListView>
-    </Grid>-->
     <StackLayout>
         <StackLayout.Resources>
             <cnvrt:ImagePathValueConverter x:Key="pathConverter"/>
             <cnvrt:ImageSizeValueConverter x:Key="sizeConverter"/>
         </StackLayout.Resources>
-        <Image HeightRequest="{Binding Question.ImagePath, Converter={StaticResource sizeConverter}}" WidthRequest="{Binding Question.ImagePath, Converter={StaticResource sizeConverter}}" Aspect="AspectFit" HorizontalOptions="Center" Source="{Binding Question.ImagePath, Converter={StaticResource pathConverter}}"/>
+        <Image 
+            HeightRequest="{Binding Question.ImagePath, Converter={StaticResource sizeConverter}}" 
+            WidthRequest="{Binding Question.ImagePath, Converter={StaticResource sizeConverter}}" 
+            Source="{Binding Question.ImagePath, Converter={StaticResource pathConverter}}"
+            HorizontalOptions="Center" 
+            Aspect="AspectFit"/>
         <Label Text="{Binding Question.QuestionString}" HorizontalOptions="Center"/>
-        <ListView ItemsSource="{Binding Answers}" SelectionMode="Single" SelectedItem="{Binding SelectedItem, Mode=TwoWay}">
+            <ListView ItemsSource="{Binding Answers}" SelectionMode="Single" SelectedItem="{Binding SelectedItem, Mode=TwoWay}" HasUnevenRows="True">
             <ListView.ItemTemplate>
                 <DataTemplate>
-                    <TextCell Text="{Binding AnswerString}"/>
+                    <TextCell Text="{Binding AnswerString}" TextColor="Gray"/>
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
