--- a/TestingSystem.XamarinForms/TestingSystem.XamarinForms/Views/QuickTestPage.xaml
+++ b/TestingSystem.XamarinForms/TestingSystem.XamarinForms/Views/QuickTestPage.xaml
@@ -3,26 +3,27 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:b="clr-namespace:TestingSystem.XamarinForms.Behaviors"
              mc:Ignorable="d"
              NavigationPage.HasNavigationBar="False"
              x:Class="TestingSystem.XamarinForms.Views.QuickTestPage">
-    <!--<ContentPage.Resources>
-        <cnvrt:TimeConverter x:Key="converter"/>
-    </ContentPage.Resources>-->
     <ContentPage.ToolbarItems>
-        <!--<ToolbarItem Text="{Binding Time}"/>-->
         <ToolbarItem Text="Finish" Command="{Binding FinishCommand}"/>
     </ContentPage.ToolbarItems>
     <ContentPage.Content>
         <StackLayout>
-            <ListView ItemsSource="{Binding Model}" ItemTemplate="{Binding ItemTemplate}" SelectionMode="None" HasUnevenRows="True" HorizontalScrollBarVisibility="Never"/>
+            <ListView ItemsSource="{Binding Model}" ItemTemplate="{Binding ItemTemplate}" SelectionMode="None" HasUnevenRows="True" HorizontalScrollBarVisibility="Never">
+                <ListView.Behaviors>
+                    <b:EventToCommandBehavior EventName="ItemTapped" Command="{Binding ImageTapCommand}"/>
+                </ListView.Behaviors>
+            </ListView>
             <Label HorizontalOptions="Center" Text="{Binding TimeString}" FontSize="Large"/>
-            <StackLayout Orientation="Horizontal" HorizontalOptions="Center">
-                <Button Text="Previous" Command="{Binding PreviousCommand}" HorizontalOptions="End"/>
+            <StackLayout Orientation="Horizontal" HorizontalOptions="Center" Padding="10">
+                <Button Text="Previous" Command="{Binding PreviousCommand}" HorizontalOptions="End" BackgroundColor="#8fc5ff" WidthRequest="100" CornerRadius="25" Margin="5"/>
                 <Label Text="{Binding Current}" HorizontalOptions="Center" VerticalOptions="Center"/>
                 <Label Text="/" HorizontalOptions="Center" VerticalOptions="Center"/>
                 <Label Text="{Binding Total}" HorizontalOptions="Center" VerticalOptions="Center"/>
-                <Button Text="Next" Command="{Binding NextCommand}" HorizontalOptions="Start"/>
+                <Button Text="Next" Command="{Binding NextCommand}" HorizontalOptions="Start" BackgroundColor="#8fc5ff" WidthRequest="100" CornerRadius="25" Margin="5"/>
             </StackLayout>
         </StackLayout>
     </ContentPage.Content>
