--- a/TestingSystem.XamarinForms/TestingSystem.XamarinForms/Controls/OneAnswerOneCorrectResultViewCell.xaml
+++ b/TestingSystem.XamarinForms/TestingSystem.XamarinForms/Controls/OneAnswerOneCorrectResultViewCell.xaml
@@ -13,8 +13,8 @@
         </StackLayout.Resources>
         <Image HeightRequest="{Binding Question.ImagePath, Converter={StaticResource sizeConverter}}" WidthRequest="{Binding Question.ImagePath, Converter={StaticResource sizeConverter}}" Aspect="AspectFit" HorizontalOptions="Center" Source="{Binding Question.ImagePath, Converter={StaticResource pathConverter}}"/>
         <Label Text="{Binding Question.QuestionString}" HorizontalOptions="Center"/>
-        <StackLayout>
-            <Label Text="{Binding CorrectAnswerString, StringFormat='Correct answer: {0}'}" />
+        <StackLayout Padding="10">
+            <Label Text="{Binding CorrectAnswerString, StringFormat='Correct answer: {0}'}"  />
             <Label Text="{Binding AnswerString, StringFormat='Your answer: {0}'}"/>
         </StackLayout>
     </StackLayout>
