--- a/TestingSystem.XamarinForms/TestingSystem.XamarinForms/Views/ProfilePage.xaml
+++ b/TestingSystem.XamarinForms/TestingSystem.XamarinForms/Views/ProfilePage.xaml
@@ -20,18 +20,18 @@
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
-            <Label Grid.Row="0" Grid.Column="0" Text="Firstname: " HorizontalOptions="End"/>
-            <Label Grid.Row="0" Grid.Column="1" Text="{Binding Student.FirstName}"/>
-            <Label Grid.Row="1" Grid.Column="0" Text="Lastname: " HorizontalOptions="End"/>
-            <Label Grid.Row="1" Grid.Column="1" Text="{Binding Student.LastName}"/>
-            <Label Grid.Row="2" Grid.Column="0" Text="Email: " HorizontalOptions="End"/>
-            <Label Grid.Row="2" Grid.Column="1" Text="{Binding Student.Email}"/>
-            <Label Grid.Row="3" Grid.Column="0" Text="Specialization: " HorizontalOptions="End"/>
-            <Label Grid.Row="3" Grid.Column="1" Text="{Binding Student.SpecializationName}"/>
-            <Label Grid.Row="4" Grid.Column="0" Text="Group: " HorizontalOptions="End"/>
-            <Label Grid.Row="4" Grid.Column="1" Text="{Binding Student.GroupName}"/>
-            <Label Grid.Row="5" Grid.Column="0" Text="Education unit: " HorizontalOptions="End"/>
-            <Label Grid.Row="5" Grid.Column="1" Text="{Binding Student.EducationUnitName}"/>
+            <Label Grid.Row="0" Grid.Column="0" Text="Firstname: " HorizontalOptions="End" FontSize="Medium" FontAttributes="Bold"/>
+            <Label Grid.Row="0" Grid.Column="1" Text="{Binding Student.FirstName}" FontSize="Medium"/>
+            <Label Grid.Row="1" Grid.Column="0" Text="Lastname: " HorizontalOptions="End" FontSize="Medium" FontAttributes="Bold"/>
+            <Label Grid.Row="1" Grid.Column="1" Text="{Binding Student.LastName}" FontSize="Medium"/>
+            <Label Grid.Row="2" Grid.Column="0" Text="Email: " HorizontalOptions="End" FontSize="Medium" FontAttributes="Bold"/>
+            <Label Grid.Row="2" Grid.Column="1" Text="{Binding Student.Email}" FontSize="Medium"/>
+            <Label Grid.Row="3" Grid.Column="0" Text="Specialization: " HorizontalOptions="End" FontSize="Medium" FontAttributes="Bold"/>
+            <Label Grid.Row="3" Grid.Column="1" Text="{Binding Student.SpecializationName}" FontSize="Medium"/>
+            <Label Grid.Row="4" Grid.Column="0" Text="Group: " HorizontalOptions="End" FontSize="Medium" FontAttributes="Bold"/>
+            <Label Grid.Row="4" Grid.Column="1" Text="{Binding Student.GroupName}" FontSize="Medium"/>
+            <Label Grid.Row="5" Grid.Column="0" Text="Education unit: " HorizontalOptions="End" FontSize="Medium" FontAttributes="Bold"/>
+            <Label Grid.Row="5" Grid.Column="1" Text="{Binding Student.EducationUnitName}" FontSize="Medium"/>
         </Grid>
     </ContentPage.Content>
 </ContentPage>
