--- a/TestingSystem.XamarinForms/TestingSystem.XamarinForms/Views/QuickTestSetupPage.xaml
+++ b/TestingSystem.XamarinForms/TestingSystem.XamarinForms/Views/QuickTestSetupPage.xaml
@@ -6,19 +6,22 @@
              mc:Ignorable="d"
              xmlns:b="clr-namespace:TestingSystem.XamarinForms.Behaviors"
              x:Class="TestingSystem.XamarinForms.Views.QuickTestSetupPage">
+    <ContentPage.ToolbarItems>
+        <ToolbarItem IconImageSource="refresh.png" Command="{Binding RefreshCommand}"/>
+    </ContentPage.ToolbarItems>
     <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Specialization"/>
-            <Picker ItemsSource="{Binding Specializations}" SelectedItem="{Binding SelectedSpecialization}"/>
-            <Label Text="Subject"/>
-            <Picker ItemsSource="{Binding Subjects}" SelectedItem="{Binding SelectedSubject}"/>
-            <Label Text="Question count"/>
-            <Entry Keyboard="Numeric" Text="{Binding QuestionCount}">
+        <StackLayout Padding="10">
+            <Label Text="Specialization" FontSize="Medium" Margin="5,0,5,0"/>
+            <Picker ItemsSource="{Binding Specializations}" SelectedItem="{Binding SelectedSpecialization}" Margin="5,0,5,0"/>
+            <Label Text="Subject" FontSize="Medium" Margin="5,0,5,0"/>
+            <Picker ItemsSource="{Binding Subjects}" SelectedItem="{Binding SelectedSubject}" Margin="5,0,5,0"/>
+            <Label Text="Question count" FontSize="Medium" Margin="5,0,5,0"/>
+            <Entry Keyboard="Numeric" Text="{Binding QuestionCount}" Margin="5,0,5,0">
                 <Entry.Behaviors>
                     <b:NumericValidationBehavior/>
                 </Entry.Behaviors>
             </Entry>
-            <Button Command="{Binding NextCommand}" Text="Next"/>
+            <Button Command="{Binding NextCommand}" Text="Next" BackgroundColor="#8fc5ff" WidthRequest="125" CornerRadius="25" Margin="10"/>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
